2013-xx-xx:
    * version 3.7
    * Fix :preferences and some :dialog commands for recent Firefoxs
    * Make sure :dialog addons really opens a dialog instead of a tab
    * add -private option to :winopen and :window for Firefox 20+ PrivateBrowsing-per-window
    * Pushed minVersion to Firefox 17
    * Clear command history after returning from private browsing

2012-12-24: A christmas present
    * version 3.6
    * Replace E4X, as it's been removed from Firefox 18+
    * Show confirmation prompt again when opening more than 20 URLs or issuing
      'delbmarks!' or 'set! all&' commands
    * Fix search result highlighting for duplicate or overlapping search terms

2012-08-04:
    * version 3.5
    * Firefox 13-15 compatibility fixes
    * Add :ignorekeys meta command to handle web pages which want to handle key input themselves
      rather than Vimperator taking over all the keys (useful for apps like gmail)
    * Make hlsearch the default search highlighting option
      and use Firefox's native method
    * add -folder option to :bmark command.
    * :open and :tabopen without arguments open about:newtab (see :set! browser.newtab.url)
    * Fix unmappable key "-". (Use \- or '-' or "-")
    * support command-count from map
    * support yank the selection on MOW by 'Y'
    * Many small other fixes

2012-04-02: It's not an April's fool
    * version 3.4
    * Fixed a mem leak when closing tabs
    * Scrolling some divs failed previously when using "j". Should work now. Thanks dom.lobue
    * hinttags fixes for gmail and other apps
    * Pressing Tab works correctly in hint mode when the list of hints has been filtered
    * Search history is accessible again
    * Display correct status messages when a text search reaches either end of the buffer
    * Url links in :jump list are clickable again
    * Gracefully handle unescaped regex characters in 'urlseparator' option
    * :sanitize now respects timespan values