@@ -1,6 +1,6 @@
 #### configuration
 
-VERSION       = 3.7pre
+VERSION       = 3.7
 NAME          = vimperator
 
 include ../common/Makefile
