@@ -16,7 +16,7 @@
             <Description>
                 <em:id>{ec8030f7-c20a-464f-9b0e-13a3a9e97384}</em:id>
                 <em:minVersion>17.0</em:minVersion>
-                <em:maxVersion>20.0a1</em:maxVersion>
+                <em:maxVersion>20.0</em:maxVersion>
             </Description>
         </em:targetApplication>
     </Description>
